import { times, shuffle } from 'lodash';
import RequestBuilder from '../request-builder';

describe('RequestBuilder', () => {
  let request;
  let connector;
  let get;

  beforeEach(() => {
    get = jest.fn((...args) => new Promise((resolve) => resolve(args)));
    connector = { get };
    request = new RequestBuilder({
      connector,
      resource: 'SomeResource',
    });
  });

  it('constructs', () => {
    expect(request).toBeTruthy();
  });

  it('gets requests', () => {
    expect(request.get()).resolves.toMatchSnapshot();
  });

  it('gets the first result', () => {
    expect(request.first()).resolves.toMatchSnapshot();
  });

  it('finds by id', () => {
    expect(request.find(1).get()).resolves.toMatchSnapshot();
  });

  it('filters', () => {
    expect(
      request.filter('Something eq SomethingElse').get()
    ).resolves.toMatchSnapshot();
  });
  it("doesn't filter if filter is blank", () => {
    expect(request.filter('').get()).resolves.toMatchSnapshot();
  });

  it('combines multiple filters with an and operator', () => {
    expect(
      request
        .filter('Something eq SomethingElse')
        .andFilter('AnotherThing eq SomethingDifferent')
        .get()
    ).resolves.toMatchSnapshot();
  });

  it('combines multiple filters with an or operator', () => {
    expect(
      request
        .filter('Something eq SomethingElse')
        .orFilter('AnotherThing eq SomethingDifferent')
        .get()
    ).resolves.toMatchSnapshot();
  });

  it('filters by one of a list of conditions', () => {
    expect(
      request.filterOneOf(['Id eq 123', 'Id eq 456', 'Id eq 789']).get()
    ).resolves.toMatchSnapshot();
  });
  it("doesn't filterOneOf if array is blank", () => {
    expect(request.filterOneOf([]).get()).resolves.toMatchSnapshot();
  });

  it('chains multiple filters', () => {
    expect(
      request
        .filter('A eq Ab')
        .filter('B eq Bc')
        .get()
    ).resolves.toMatchSnapshot();
  });

  it('expands', () => {
    expect(request.expand('Puppies').get()).resolves.toMatchSnapshot();
  });

  it('chains multiple expands', () => {
    expect(
      request
        .expand('Puppies')
        .expand('Cats')
        .get()
    ).resolves.toMatchSnapshot();
  });

  it('chains mixed-format expands', () => {
    expect(
      request
        .expand('Dogs/Puppies')
        .expand('Cats,Kittens')
        .get()
    ).resolves.toMatchSnapshot();
  });

  it('allows for pagination', () => {
    expect(
      request
        .top(2)
        .skip(5)
        .get()
    ).resolves.toMatchSnapshot();
  });

  it('caches', () => {
    expect(request.cache({ ttl: 20 }).get()).resolves.toMatchSnapshot();
  });

  it('orders', () => {
    expect(request.orderBy('MyField').get()).resolves.toMatchSnapshot();
  });

  it('selects', () => {
    expect(request.select('Id').get()).resolves.toMatchSnapshot();
  });

  it('orders in custom order', () => {
    expect(request.orderBy('MyField', 'desc').get()).resolves.toMatchSnapshot();
  });

  it('returns an empty array', () => {
    expect(request.empty().get()).resolves.toEqual([]);
  });

  it('transforms result shapes', () => {
    get = jest.fn(() => new Promise((resolve) => resolve({ a: 'yo' })));
    connector = { get };
    request = new RequestBuilder({
      connector,
      resource: 'SomeResource',
    });

    expect(
      request
        .transform((input) => {
          expect(input).toMatchSnapshot();
          return { b: 'neigh' };
        })
        .get()
    ).resolves.toMatchSnapshot();
  });

  it('chunks requests that would break the Rock node limit into multiple requests', async () => {
    const largeRequest = times(30, (i) => `Id eq ${i}`);
    const result = await request.filterOneOf(largeRequest).get();

    expect(result).toMatchSnapshot();
    expect(get.mock.calls).toMatchSnapshot();
    expect(get.mock.calls.length).toBe(2);
  });

  it('chunks requests that would break the Rock node limit into multiple requests and preserves "and" filters', async () => {
    const largeRequest = times(30, (i) => `Id eq ${i}`);
    const result = await request
      .filterOneOf(largeRequest)
      .andFilter('SomeDate before Value')
      .get();

    expect(result).toMatchSnapshot();
    expect(get.mock.calls).toMatchSnapshot();
    expect(get.mock.calls.length).toBe(2);
  });

  it('chunks requests that would break the Rock node limit into multiple requests and handles "orderBy"', async () => {
    const dataToSort = shuffle(times(30, (i) => ({ Order: i })));
    get = jest.fn(() => Promise.resolve(dataToSort));
    connector = { get };
    request = new RequestBuilder({
      connector,
      resource: 'SomeResource',
    });

    const largeRequest = times(30, (i) => `Id eq ${i}`);
    const result = await request
      .filterOneOf(largeRequest)
      .orderBy('Order')
      .get();

    expect(result).toMatchSnapshot();
    expect(get.mock.calls).toMatchSnapshot();
    expect(get.mock.calls.length).toBe(2);
  });

  it('chunks requests that would break the Rock node limit into multiple requests and handles "skip"', async () => {
    const dataToSort = shuffle(times(30, (i) => ({ Order: i })));
    get = jest.fn(() => Promise.resolve(dataToSort));
    connector = { get };
    request = new RequestBuilder({
      connector,
      resource: 'SomeResource',
    });

    const largeRequest = times(30, (i) => `Id eq ${i}`);
    const result = await request
      .filterOneOf(largeRequest)
      .skip(10)
      .orderBy('Order')
      .get();

    expect(result).toMatchSnapshot();
    // 50, because we are returning 30 results twice minus 10
    expect(result.length).toBe(50);
    expect(get.mock.calls).toMatchSnapshot();
    expect(get.mock.calls.length).toBe(2);
  });

  it('chunks requests that would break the Rock node limit into multiple requests and handles "top"', async () => {
    const dataToSort = shuffle(times(30, (i) => ({ Order: i })));
    get = jest.fn(() => Promise.resolve(dataToSort));
    connector = { get };
    request = new RequestBuilder({
      connector,
      resource: 'SomeResource',
    });

    const largeRequest = times(30, (i) => `Id eq ${i}`);
    const result = await request
      .filterOneOf(largeRequest)
      .top(10)
      .orderBy('Order')
      .get();

    expect(result).toMatchSnapshot();
    expect(result.length).toBe(10);
    expect(get.mock.calls).toMatchSnapshot();
    expect(get.mock.calls.length).toBe(2);
  });

  it('chunks requests that would break the Rock node limit into multiple requests and handles "top" and "skip"', async () => {
    const dataToSort = shuffle(times(30, (i) => ({ Order: i })));
    get = jest.fn(() => Promise.resolve(dataToSort));
    connector = { get };
    request = new RequestBuilder({
      connector,
      resource: 'SomeResource',
    });

    const largeRequest = times(30, (i) => `Id eq ${i}`);
    const result = await request
      .filterOneOf(largeRequest)
      .top(10)
      .skip(10)
      .orderBy('Order')
      .get();

    expect(result).toMatchSnapshot();
    expect(result.length).toBe(10);
    expect(get.mock.calls).toMatchSnapshot();
    expect(get.mock.calls.length).toBe(2);
  });

  it('chunks requests that would break the Rock node limit into multiple requests and handles "first"', async () => {
    const dataToSort = shuffle(times(30, (i) => ({ Order: i })));
    get = jest.fn(() => Promise.resolve(dataToSort));
    connector = { get };
    request = new RequestBuilder({
      connector,
      resource: 'SomeResource',
    });

    const largeRequest = times(30, (i) => `Id eq ${i}`);
    const result = await request
      .filterOneOf(largeRequest)
      .orderBy('Order')
      .first();

    expect(result).toEqual({ Order: 0 });
    expect(get.mock.calls).toMatchSnapshot();
    expect(get.mock.calls.length).toBe(2);
  });
});
