// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequestBuilder allows for pagination 1`] = `
Array [
  "SomeResource?%24top=2&%24skip=5",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder caches 1`] = `
Array [
  "SomeResource",
  Object {},
  Object {
    "ttl": 20,
  },
]
`;

exports[`RequestBuilder chains mixed-format expands 1`] = `
Array [
  "SomeResource?%24expand=Dogs%2FPuppies%2CCats%2CKittens",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder chains multiple expands 1`] = `
Array [
  "SomeResource?%24expand=Puppies%2CCats",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder chains multiple filters 1`] = `
Array [
  "SomeResource?%24filter=%28A%20eq%20Ab%29%20or%20%28B%20eq%20Bc%29",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder chunks requests that would break the Rock node limit into multiple requests 1`] = `
Array [
  "SomeResource?%24filter=%28Id%20eq%200%29%20or%20%28Id%20eq%201%29%20or%20%28Id%20eq%202%29%20or%20%28Id%20eq%203%29%20or%20%28Id%20eq%204%29%20or%20%28Id%20eq%205%29%20or%20%28Id%20eq%206%29%20or%20%28Id%20eq%207%29%20or%20%28Id%20eq%208%29%20or%20%28Id%20eq%209%29%20or%20%28Id%20eq%2010%29%20or%20%28Id%20eq%2011%29%20or%20%28Id%20eq%2012%29%20or%20%28Id%20eq%2013%29%20or%20%28Id%20eq%2014%29",
  Object {},
  Object {},
  "SomeResource?%24filter=%28Id%20eq%2015%29%20or%20%28Id%20eq%2016%29%20or%20%28Id%20eq%2017%29%20or%20%28Id%20eq%2018%29%20or%20%28Id%20eq%2019%29%20or%20%28Id%20eq%2020%29%20or%20%28Id%20eq%2021%29%20or%20%28Id%20eq%2022%29%20or%20%28Id%20eq%2023%29%20or%20%28Id%20eq%2024%29%20or%20%28Id%20eq%2025%29%20or%20%28Id%20eq%2026%29%20or%20%28Id%20eq%2027%29%20or%20%28Id%20eq%2028%29%20or%20%28Id%20eq%2029%29",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder chunks requests that would break the Rock node limit into multiple requests 2`] = `
Array [
  Array [
    "SomeResource?%24filter=%28Id%20eq%200%29%20or%20%28Id%20eq%201%29%20or%20%28Id%20eq%202%29%20or%20%28Id%20eq%203%29%20or%20%28Id%20eq%204%29%20or%20%28Id%20eq%205%29%20or%20%28Id%20eq%206%29%20or%20%28Id%20eq%207%29%20or%20%28Id%20eq%208%29%20or%20%28Id%20eq%209%29%20or%20%28Id%20eq%2010%29%20or%20%28Id%20eq%2011%29%20or%20%28Id%20eq%2012%29%20or%20%28Id%20eq%2013%29%20or%20%28Id%20eq%2014%29",
    Object {},
    Object {},
  ],
  Array [
    "SomeResource?%24filter=%28Id%20eq%2015%29%20or%20%28Id%20eq%2016%29%20or%20%28Id%20eq%2017%29%20or%20%28Id%20eq%2018%29%20or%20%28Id%20eq%2019%29%20or%20%28Id%20eq%2020%29%20or%20%28Id%20eq%2021%29%20or%20%28Id%20eq%2022%29%20or%20%28Id%20eq%2023%29%20or%20%28Id%20eq%2024%29%20or%20%28Id%20eq%2025%29%20or%20%28Id%20eq%2026%29%20or%20%28Id%20eq%2027%29%20or%20%28Id%20eq%2028%29%20or%20%28Id%20eq%2029%29",
    Object {},
    Object {},
  ],
]
`;

exports[`RequestBuilder chunks requests that would break the Rock node limit into multiple requests and handles "first" 1`] = `
Array [
  Array [
    "SomeResource?%24filter=%28Id%20eq%200%29%20or%20%28Id%20eq%201%29%20or%20%28Id%20eq%202%29%20or%20%28Id%20eq%203%29%20or%20%28Id%20eq%204%29%20or%20%28Id%20eq%205%29%20or%20%28Id%20eq%206%29%20or%20%28Id%20eq%207%29%20or%20%28Id%20eq%208%29%20or%20%28Id%20eq%209%29%20or%20%28Id%20eq%2010%29%20or%20%28Id%20eq%2011%29%20or%20%28Id%20eq%2012%29%20or%20%28Id%20eq%2013%29%20or%20%28Id%20eq%2014%29",
    Object {},
    Object {},
  ],
  Array [
    "SomeResource?%24filter=%28Id%20eq%2015%29%20or%20%28Id%20eq%2016%29%20or%20%28Id%20eq%2017%29%20or%20%28Id%20eq%2018%29%20or%20%28Id%20eq%2019%29%20or%20%28Id%20eq%2020%29%20or%20%28Id%20eq%2021%29%20or%20%28Id%20eq%2022%29%20or%20%28Id%20eq%2023%29%20or%20%28Id%20eq%2024%29%20or%20%28Id%20eq%2025%29%20or%20%28Id%20eq%2026%29%20or%20%28Id%20eq%2027%29%20or%20%28Id%20eq%2028%29%20or%20%28Id%20eq%2029%29",
    Object {},
    Object {},
  ],
]
`;

exports[`RequestBuilder chunks requests that would break the Rock node limit into multiple requests and handles "orderBy" 1`] = `
Array [
  Object {
    "Order": 0,
  },
  Object {
    "Order": 0,
  },
  Object {
    "Order": 1,
  },
  Object {
    "Order": 1,
  },
  Object {
    "Order": 2,
  },
  Object {
    "Order": 2,
  },
  Object {
    "Order": 3,
  },
  Object {
    "Order": 3,
  },
  Object {
    "Order": 4,
  },
  Object {
    "Order": 4,
  },
  Object {
    "Order": 5,
  },
  Object {
    "Order": 5,
  },
  Object {
    "Order": 6,
  },
  Object {
    "Order": 6,
  },
  Object {
    "Order": 7,
  },
  Object {
    "Order": 7,
  },
  Object {
    "Order": 8,
  },
  Object {
    "Order": 8,
  },
  Object {
    "Order": 9,
  },
  Object {
    "Order": 9,
  },
  Object {
    "Order": 10,
  },
  Object {
    "Order": 10,
  },
  Object {
    "Order": 11,
  },
  Object {
    "Order": 11,
  },
  Object {
    "Order": 12,
  },
  Object {
    "Order": 12,
  },
  Object {
    "Order": 13,
  },
  Object {
    "Order": 13,
  },
  Object {
    "Order": 14,
  },
  Object {
    "Order": 14,
  },
  Object {
    "Order": 15,
  },
  Object {
    "Order": 15,
  },
  Object {
    "Order": 16,
  },
  Object {
    "Order": 16,
  },
  Object {
    "Order": 17,
  },
  Object {
    "Order": 17,
  },
  Object {
    "Order": 18,
  },
  Object {
    "Order": 18,
  },
  Object {
    "Order": 19,
  },
  Object {
    "Order": 19,
  },
  Object {
    "Order": 20,
  },
  Object {
    "Order": 20,
  },
  Object {
    "Order": 21,
  },
  Object {
    "Order": 21,
  },
  Object {
    "Order": 22,
  },
  Object {
    "Order": 22,
  },
  Object {
    "Order": 23,
  },
  Object {
    "Order": 23,
  },
  Object {
    "Order": 24,
  },
  Object {
    "Order": 24,
  },
  Object {
    "Order": 25,
  },
  Object {
    "Order": 25,
  },
  Object {
    "Order": 26,
  },
  Object {
    "Order": 26,
  },
  Object {
    "Order": 27,
  },
  Object {
    "Order": 27,
  },
  Object {
    "Order": 28,
  },
  Object {
    "Order": 28,
  },
  Object {
    "Order": 29,
  },
  Object {
    "Order": 29,
  },
]
`;

exports[`RequestBuilder chunks requests that would break the Rock node limit into multiple requests and handles "orderBy" 2`] = `
Array [
  Array [
    "SomeResource?%24filter=%28Id%20eq%200%29%20or%20%28Id%20eq%201%29%20or%20%28Id%20eq%202%29%20or%20%28Id%20eq%203%29%20or%20%28Id%20eq%204%29%20or%20%28Id%20eq%205%29%20or%20%28Id%20eq%206%29%20or%20%28Id%20eq%207%29%20or%20%28Id%20eq%208%29%20or%20%28Id%20eq%209%29%20or%20%28Id%20eq%2010%29%20or%20%28Id%20eq%2011%29%20or%20%28Id%20eq%2012%29%20or%20%28Id%20eq%2013%29%20or%20%28Id%20eq%2014%29",
    Object {},
    Object {},
  ],
  Array [
    "SomeResource?%24filter=%28Id%20eq%2015%29%20or%20%28Id%20eq%2016%29%20or%20%28Id%20eq%2017%29%20or%20%28Id%20eq%2018%29%20or%20%28Id%20eq%2019%29%20or%20%28Id%20eq%2020%29%20or%20%28Id%20eq%2021%29%20or%20%28Id%20eq%2022%29%20or%20%28Id%20eq%2023%29%20or%20%28Id%20eq%2024%29%20or%20%28Id%20eq%2025%29%20or%20%28Id%20eq%2026%29%20or%20%28Id%20eq%2027%29%20or%20%28Id%20eq%2028%29%20or%20%28Id%20eq%2029%29",
    Object {},
    Object {},
  ],
]
`;

exports[`RequestBuilder chunks requests that would break the Rock node limit into multiple requests and handles "skip" 1`] = `
Array [
  Object {
    "Order": 5,
  },
  Object {
    "Order": 5,
  },
  Object {
    "Order": 6,
  },
  Object {
    "Order": 6,
  },
  Object {
    "Order": 7,
  },
  Object {
    "Order": 7,
  },
  Object {
    "Order": 8,
  },
  Object {
    "Order": 8,
  },
  Object {
    "Order": 9,
  },
  Object {
    "Order": 9,
  },
  Object {
    "Order": 10,
  },
  Object {
    "Order": 10,
  },
  Object {
    "Order": 11,
  },
  Object {
    "Order": 11,
  },
  Object {
    "Order": 12,
  },
  Object {
    "Order": 12,
  },
  Object {
    "Order": 13,
  },
  Object {
    "Order": 13,
  },
  Object {
    "Order": 14,
  },
  Object {
    "Order": 14,
  },
  Object {
    "Order": 15,
  },
  Object {
    "Order": 15,
  },
  Object {
    "Order": 16,
  },
  Object {
    "Order": 16,
  },
  Object {
    "Order": 17,
  },
  Object {
    "Order": 17,
  },
  Object {
    "Order": 18,
  },
  Object {
    "Order": 18,
  },
  Object {
    "Order": 19,
  },
  Object {
    "Order": 19,
  },
  Object {
    "Order": 20,
  },
  Object {
    "Order": 20,
  },
  Object {
    "Order": 21,
  },
  Object {
    "Order": 21,
  },
  Object {
    "Order": 22,
  },
  Object {
    "Order": 22,
  },
  Object {
    "Order": 23,
  },
  Object {
    "Order": 23,
  },
  Object {
    "Order": 24,
  },
  Object {
    "Order": 24,
  },
  Object {
    "Order": 25,
  },
  Object {
    "Order": 25,
  },
  Object {
    "Order": 26,
  },
  Object {
    "Order": 26,
  },
  Object {
    "Order": 27,
  },
  Object {
    "Order": 27,
  },
  Object {
    "Order": 28,
  },
  Object {
    "Order": 28,
  },
  Object {
    "Order": 29,
  },
  Object {
    "Order": 29,
  },
]
`;

exports[`RequestBuilder chunks requests that would break the Rock node limit into multiple requests and handles "skip" 2`] = `
Array [
  Array [
    "SomeResource?%24filter=%28Id%20eq%200%29%20or%20%28Id%20eq%201%29%20or%20%28Id%20eq%202%29%20or%20%28Id%20eq%203%29%20or%20%28Id%20eq%204%29%20or%20%28Id%20eq%205%29%20or%20%28Id%20eq%206%29%20or%20%28Id%20eq%207%29%20or%20%28Id%20eq%208%29%20or%20%28Id%20eq%209%29%20or%20%28Id%20eq%2010%29%20or%20%28Id%20eq%2011%29%20or%20%28Id%20eq%2012%29%20or%20%28Id%20eq%2013%29%20or%20%28Id%20eq%2014%29",
    Object {},
    Object {},
  ],
  Array [
    "SomeResource?%24filter=%28Id%20eq%2015%29%20or%20%28Id%20eq%2016%29%20or%20%28Id%20eq%2017%29%20or%20%28Id%20eq%2018%29%20or%20%28Id%20eq%2019%29%20or%20%28Id%20eq%2020%29%20or%20%28Id%20eq%2021%29%20or%20%28Id%20eq%2022%29%20or%20%28Id%20eq%2023%29%20or%20%28Id%20eq%2024%29%20or%20%28Id%20eq%2025%29%20or%20%28Id%20eq%2026%29%20or%20%28Id%20eq%2027%29%20or%20%28Id%20eq%2028%29%20or%20%28Id%20eq%2029%29",
    Object {},
    Object {},
  ],
]
`;

exports[`RequestBuilder chunks requests that would break the Rock node limit into multiple requests and handles "top" 1`] = `
Array [
  Object {
    "Order": 0,
  },
  Object {
    "Order": 0,
  },
  Object {
    "Order": 1,
  },
  Object {
    "Order": 1,
  },
  Object {
    "Order": 2,
  },
  Object {
    "Order": 2,
  },
  Object {
    "Order": 3,
  },
  Object {
    "Order": 3,
  },
  Object {
    "Order": 4,
  },
  Object {
    "Order": 4,
  },
]
`;

exports[`RequestBuilder chunks requests that would break the Rock node limit into multiple requests and handles "top" 2`] = `
Array [
  Array [
    "SomeResource?%24filter=%28Id%20eq%200%29%20or%20%28Id%20eq%201%29%20or%20%28Id%20eq%202%29%20or%20%28Id%20eq%203%29%20or%20%28Id%20eq%204%29%20or%20%28Id%20eq%205%29%20or%20%28Id%20eq%206%29%20or%20%28Id%20eq%207%29%20or%20%28Id%20eq%208%29%20or%20%28Id%20eq%209%29%20or%20%28Id%20eq%2010%29%20or%20%28Id%20eq%2011%29%20or%20%28Id%20eq%2012%29%20or%20%28Id%20eq%2013%29%20or%20%28Id%20eq%2014%29",
    Object {},
    Object {},
  ],
  Array [
    "SomeResource?%24filter=%28Id%20eq%2015%29%20or%20%28Id%20eq%2016%29%20or%20%28Id%20eq%2017%29%20or%20%28Id%20eq%2018%29%20or%20%28Id%20eq%2019%29%20or%20%28Id%20eq%2020%29%20or%20%28Id%20eq%2021%29%20or%20%28Id%20eq%2022%29%20or%20%28Id%20eq%2023%29%20or%20%28Id%20eq%2024%29%20or%20%28Id%20eq%2025%29%20or%20%28Id%20eq%2026%29%20or%20%28Id%20eq%2027%29%20or%20%28Id%20eq%2028%29%20or%20%28Id%20eq%2029%29",
    Object {},
    Object {},
  ],
]
`;

exports[`RequestBuilder chunks requests that would break the Rock node limit into multiple requests and handles "top" and "skip" 1`] = `
Array [
  Object {
    "Order": 5,
  },
  Object {
    "Order": 5,
  },
  Object {
    "Order": 6,
  },
  Object {
    "Order": 6,
  },
  Object {
    "Order": 7,
  },
  Object {
    "Order": 7,
  },
  Object {
    "Order": 8,
  },
  Object {
    "Order": 8,
  },
  Object {
    "Order": 9,
  },
  Object {
    "Order": 9,
  },
]
`;

exports[`RequestBuilder chunks requests that would break the Rock node limit into multiple requests and handles "top" and "skip" 2`] = `
Array [
  Array [
    "SomeResource?%24filter=%28Id%20eq%200%29%20or%20%28Id%20eq%201%29%20or%20%28Id%20eq%202%29%20or%20%28Id%20eq%203%29%20or%20%28Id%20eq%204%29%20or%20%28Id%20eq%205%29%20or%20%28Id%20eq%206%29%20or%20%28Id%20eq%207%29%20or%20%28Id%20eq%208%29%20or%20%28Id%20eq%209%29%20or%20%28Id%20eq%2010%29%20or%20%28Id%20eq%2011%29%20or%20%28Id%20eq%2012%29%20or%20%28Id%20eq%2013%29%20or%20%28Id%20eq%2014%29",
    Object {},
    Object {},
  ],
  Array [
    "SomeResource?%24filter=%28Id%20eq%2015%29%20or%20%28Id%20eq%2016%29%20or%20%28Id%20eq%2017%29%20or%20%28Id%20eq%2018%29%20or%20%28Id%20eq%2019%29%20or%20%28Id%20eq%2020%29%20or%20%28Id%20eq%2021%29%20or%20%28Id%20eq%2022%29%20or%20%28Id%20eq%2023%29%20or%20%28Id%20eq%2024%29%20or%20%28Id%20eq%2025%29%20or%20%28Id%20eq%2026%29%20or%20%28Id%20eq%2027%29%20or%20%28Id%20eq%2028%29%20or%20%28Id%20eq%2029%29",
    Object {},
    Object {},
  ],
]
`;

exports[`RequestBuilder chunks requests that would break the Rock node limit into multiple requests and preserves "and" filters 1`] = `
Array [
  "SomeResource?%24filter=%28%28SomeDate%20before%20Value%29%29%20and%20%28%28Id%20eq%200%29%20or%20%28Id%20eq%201%29%20or%20%28Id%20eq%202%29%20or%20%28Id%20eq%203%29%20or%20%28Id%20eq%204%29%20or%20%28Id%20eq%205%29%20or%20%28Id%20eq%206%29%20or%20%28Id%20eq%207%29%20or%20%28Id%20eq%208%29%20or%20%28Id%20eq%209%29%20or%20%28Id%20eq%2010%29%20or%20%28Id%20eq%2011%29%20or%20%28Id%20eq%2012%29%20or%20%28Id%20eq%2013%29%20or%20%28Id%20eq%2014%29%29",
  Object {},
  Object {},
  "SomeResource?%24filter=%28%28SomeDate%20before%20Value%29%29%20and%20%28%28Id%20eq%2015%29%20or%20%28Id%20eq%2016%29%20or%20%28Id%20eq%2017%29%20or%20%28Id%20eq%2018%29%20or%20%28Id%20eq%2019%29%20or%20%28Id%20eq%2020%29%20or%20%28Id%20eq%2021%29%20or%20%28Id%20eq%2022%29%20or%20%28Id%20eq%2023%29%20or%20%28Id%20eq%2024%29%20or%20%28Id%20eq%2025%29%20or%20%28Id%20eq%2026%29%20or%20%28Id%20eq%2027%29%20or%20%28Id%20eq%2028%29%20or%20%28Id%20eq%2029%29%29",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder chunks requests that would break the Rock node limit into multiple requests and preserves "and" filters 2`] = `
Array [
  Array [
    "SomeResource?%24filter=%28%28SomeDate%20before%20Value%29%29%20and%20%28%28Id%20eq%200%29%20or%20%28Id%20eq%201%29%20or%20%28Id%20eq%202%29%20or%20%28Id%20eq%203%29%20or%20%28Id%20eq%204%29%20or%20%28Id%20eq%205%29%20or%20%28Id%20eq%206%29%20or%20%28Id%20eq%207%29%20or%20%28Id%20eq%208%29%20or%20%28Id%20eq%209%29%20or%20%28Id%20eq%2010%29%20or%20%28Id%20eq%2011%29%20or%20%28Id%20eq%2012%29%20or%20%28Id%20eq%2013%29%20or%20%28Id%20eq%2014%29%29",
    Object {},
    Object {},
  ],
  Array [
    "SomeResource?%24filter=%28%28SomeDate%20before%20Value%29%29%20and%20%28%28Id%20eq%2015%29%20or%20%28Id%20eq%2016%29%20or%20%28Id%20eq%2017%29%20or%20%28Id%20eq%2018%29%20or%20%28Id%20eq%2019%29%20or%20%28Id%20eq%2020%29%20or%20%28Id%20eq%2021%29%20or%20%28Id%20eq%2022%29%20or%20%28Id%20eq%2023%29%20or%20%28Id%20eq%2024%29%20or%20%28Id%20eq%2025%29%20or%20%28Id%20eq%2026%29%20or%20%28Id%20eq%2027%29%20or%20%28Id%20eq%2028%29%20or%20%28Id%20eq%2029%29%29",
    Object {},
    Object {},
  ],
]
`;

exports[`RequestBuilder combines multiple filters with an and operator 1`] = `
Array [
  "SomeResource?%24filter=%28%28AnotherThing%20eq%20SomethingDifferent%29%29%20and%20%28%28Something%20eq%20SomethingElse%29%29",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder combines multiple filters with an or operator 1`] = `
Array [
  "SomeResource?%24filter=%28Something%20eq%20SomethingElse%29%20or%20%28AnotherThing%20eq%20SomethingDifferent%29",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder doesn't filter if filter is blank 1`] = `
Array [
  "SomeResource",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder doesn't filterOneOf if array is blank 1`] = `
Array [
  "SomeResource",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder expands 1`] = `
Array [
  "SomeResource?%24expand=Puppies",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder filters 1`] = `
Array [
  "SomeResource?%24filter=%28Something%20eq%20SomethingElse%29",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder filters by one of a list of conditions 1`] = `
Array [
  "SomeResource?%24filter=%28Id%20eq%20123%29%20or%20%28Id%20eq%20456%29%20or%20%28Id%20eq%20789%29",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder finds by id 1`] = `
Array [
  "SomeResource/1",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder gets requests 1`] = `
Array [
  "SomeResource",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder gets the first result 1`] = `"SomeResource?%24top=1"`;

exports[`RequestBuilder orders 1`] = `
Array [
  "SomeResource?%24orderby=MyField%20asc",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder orders in custom order 1`] = `
Array [
  "SomeResource?%24orderby=MyField%20desc",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder selects 1`] = `
Array [
  "SomeResource?%24select=Id",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder transforms result shapes 1`] = `
Object {
  "a": "yo",
}
`;

exports[`RequestBuilder transforms result shapes 2`] = `
Object {
  "b": "neigh",
}
`;
